--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.0",
     "js-sha256": "^0.11.0",
-    "next": "15.0.3",
+    "next": "^16.0.7",
     "pg": "^8.16.3",
     "qz-tray": "^2.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "vercel": "^48.10.6"
   },
   "devDependencies": {
@@ -26,8 +26,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
