--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.0.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.0",
+    "googleapis": "^169.0.0",
     "js-sha256": "^0.11.0",
     "next": "^16.0.7",
     "pg": "^8.16.3",
