--- a/.gitignore
+++ b/.gitignore
@@ -24,24 +24,11 @@ ts-debug.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
 
-# next-swc binary
-next-swc.darwin-arm64.node
-*.node
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-venv/
-env/
-ENV/
-.venv
-*.egg-info/
-dist/
-build/
+# typescript
+*.tsbuildinfo
+next-env.d.ts
