--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "antigravity-warehouse",
+  "name": "usav-orders-simple",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.0.0",
-    "dotenv": "^17.2.3",
-    "framer-motion": "^11.0.0",
-    "googleapis": "^169.0.0",
-    "js-sha256": "^0.11.0",
     "next": "^16.0.7",
-    "pg": "^8.16.3",
-    "qz-tray": "^2.2.4",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "vercel": "^48.10.6"
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/pg": "^8.15.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
