--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "usav-orders-simple",
+  "name": "usav-orders-backend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.0.0",
+    "framer-motion": "^11.0.0",
     "next": "^16.0.7",
+    "pg": "^8.16.3",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
