--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@tanstack/react-query": "^5.0.0",
     "framer-motion": "^11.0.0",
+    "googleapis": "^169.0.0",
     "next": "^16.0.7",
     "pg": "^8.16.3",
     "react": "^19.2.1",
