--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:studio": "drizzle-kit studio",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@tanstack/react-query": "^5.0.0",
+    "drizzle-kit": "^0.31.8",
+    "drizzle-orm": "^0.45.1",
     "framer-motion": "^11.0.0",
     "googleapis": "^169.0.0",
     "next": "^16.0.7",
     "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
   },
