--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^11.0.0",
     "googleapis": "^169.0.0",
+    "html5-qrcode": "^2.3.8",
     "next": "^16.0.7",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
