--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-next": "^16.0.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^50.3.3"
   }
 }
