--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
