--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@tanstack/react-query": "^5.0.0",
     "@types/nodemailer": "^7.0.5",
+    "canvas-confetti": "^1.9.4",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
@@ -30,6 +31,7 @@
     "sonner": "^2.0.7"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/pg": "^8.15.6",
     "@types/react": "^18",
