--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@tanstack/react-query": "^5.0.0",
     "@types/nodemailer": "^7.0.5",
+    "@vercel/blob": "^0.27.0",
     "canvas-confetti": "^1.9.4",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.8",
