--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@neondatabase/serverless": "^1.0.2",
     "@tanstack/react-query": "^5.0.0",
     "@types/nodemailer": "^7.0.5",
+    "@upstash/qstash": "^2.9.0",
+    "@upstash/redis": "^1.36.2",
     "@vercel/blob": "^0.27.0",
     "canvas-confetti": "^1.9.4",
     "dotenv": "^17.2.3",
